--- a/dev/playground.html
+++ b/dev/playground.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Playground</title>
+    <link rel="stylesheet" href="dist/entry.css">
 </head>
 
 <body>
