--- a/dev/playground.html
+++ b/dev/playground.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Playground</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
     <link rel="stylesheet" href="dist/entry.css">
 </head>
 
 <body>
         <div id="test-root"></div>
-
         <script src="dist/entry.js"></script>
 </body>
 
