--- a/dev/playground.html
+++ b/dev/playground.html
@@ -9,8 +9,9 @@
 </head>
 
 <body>
-        <div id="test-root"></div>
-        <script src="dist/entry.js"></script>
+    <textarea placeholder="Hello World"></textarea>
+    <div id="test-root"></div>
+    <script src="dist/entry.js"></script>
 </body>
 
 </html>
